--- a/pagesStyle.css
+++ b/pagesStyle.css
@@ -1,73 +1,75 @@
-header, nav, article, aside, footer {
+/* external style sheet that is linked to museums descriptions pages*/
+
+header, nav, article, aside, footer{
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
 }
 
-header {
+header{
     background-color: #003A6B;
     color: white;
     padding: 20px;
     text-align: center;
 }
 
-header img {
+header img{
     display: inline-block;
     margin-right: 20px;
 }
 
-nav {
+nav{
     background-color: lightblue;
     padding: 15px;
     text-align: center;
 }
 
-nav ul li {
+nav ul li{
     display: inline-block;
     margin: 0 15px;
 }
 
-nav ul li a {
+nav ul li a{
     color: white;
     text-decoration: none;
     font-weight: bold;
 }
 
-nav ul li a:hover {
+nav ul li a:hover{
     color: lightgray;
     text-shadow: 1px 1px 2px gray;
 }
 
-table {
+table{
     width: 100%;
     margin: 20px 0;
     border-spacing: 20px;
 }
 
-article, aside {
+article, aside{
     background-color: white;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-footer {
+footer{
     background-color: #003A6B;
     color: white;
     text-align: center;
     padding: 20px;
 }
 
-footer img {
+footer img{
     margin-top: 10px;
     display: inline-block;
 }
 
-a {
+a{
     color: #2e5b80;
     text-decoration: none;
 }
 
-a:hover {
+a:hover{
     text-decoration: underline;
 }
