--- a/pagesStyle.css
+++ b/pagesStyle.css
@@ -7,8 +7,8 @@ header, nav, article, aside, footer{
 }
 
 header{
-    background-color: #003A6B;
-    color: white;
+    background-color: #987554;
+    color: #f4eadc;
     padding: 20px;
     text-align: center;
 }
@@ -19,7 +19,7 @@ header img{
 }
 
 nav{
-    background-color: lightblue;
+    background-color: #987554;
     padding: 15px;
     text-align: center;
 }
@@ -30,13 +30,13 @@ nav ul li{
 }
 
 nav ul li a{
-    color: white;
+    color: #f4eadc;
     text-decoration: none;
     font-weight: bold;
 }
 
 nav ul li a:hover{
-    color: lightgray;
+    color: #e0d2bf;
     text-shadow: 1px 1px 2px gray;
 }
 
@@ -47,15 +47,15 @@ table{
 }
 
 article, aside{
-    background-color: white;
+    background-color: #e0d2bf;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 footer{
-    background-color: #003A6B;
-    color: white;
+    background-color: #f4eadc;
+    color: #e0d2bf;
     text-align: center;
     padding: 20px;
 }
@@ -66,7 +66,7 @@ footer img{
 }
 
 a{
-    color: #2e5b80;
+    color: #705022;
     text-decoration: none;
 }
 
