--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
 						padding:0; 
 						height:100%; 
 						color:#705022;
-						font-style: verdana;
+						font-family:  georgia,times new roman;
 						
 					}
 			
@@ -24,8 +24,12 @@
 						outline:none;
 						padding:0px;
 						margin-top:0px;
-						font-size:170%;
+						font-size:190%;
 						text-align:center;
+						 padding-bottom:50px;
+						text-transform: uppercase;
+						font-weight:bold;
+						text-shadow: 0 0 5px #987554;
 						
 			}
 			
@@ -39,13 +43,16 @@
 						border-radius:5px;
 						text-align:center;
 						align-content:center;
+						box-shadow:1px 1px 2px #987554, 0 0 25px #987554, 0 0 5px #987554;
 						}
 			.pic{		margin-right:30%;
 						margin-left:30%;
 						width:30%;
-						margin-top:7%;
+						margin-top:9%;
+						margin-bottom:3%;
 						border:outset 2px #987554;
 						border-radius:5px;
+			     			box-shadow:1px 1px 2px #987554, 0 0 25px #987554, 0 0 5px #987554;
 			}
 			#quote{ 	font-size:250%;
 						margin-left:8%;
