--- a/pagesStyle.css
+++ b/pagesStyle.css
@@ -37,7 +37,10 @@ header p {
 	text-align:justify;
 }
 #MLogo {
-	position: absolute; 
+    position: absolute;
+    top: 20px;
+    left: 45%;
+        }
 }
 nav {
     background-color: #987554;
@@ -103,3 +106,32 @@ a:hover {
     text-decoration: underline;
 }
 
+#rec    {
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+    padding-top:5px;
+}
+h2        {
+    text-shadow: 2px 2px 5px #ad792f;
+    }
+
+
+/* styling Back button */
+input[type="button"]
+{
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        padding: 10px 20px;
+        font-size: 16px;
+        background-color: #ad792f;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+input[type="button"]:hover
+{
+            background-color: #8c643b;
+    }
