--- a/pagesStyle.css
+++ b/pagesStyle.css
@@ -5,7 +5,7 @@ header, nav, article, aside, footer {
 }
 header {
 	text-align: center;
-	background-image:linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url('Mbg.jpeg');
+	background-image:linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75));
 	background-size: cover;
 }
 .sec1 {
