--- a/pagesStyle.css
+++ b/pagesStyle.css
@@ -106,20 +106,19 @@ a:hover {
     text-decoration: underline;
 }
 
-#rec    {
+#rec {
     display:block;
     margin-left:auto;
     margin-right:auto;
     padding-top:5px;
 }
-h2        {
+h2  {
     text-shadow: 2px 2px 5px #ad792f;
     }
 
 
 /* styling Back button */
-input[type="button"]
-{
+input[type="button"] {
         position: absolute;
         top: 20px;
         left: 20px;
@@ -131,7 +130,6 @@ input[type="button"]
         border-radius: 5px;
         cursor: pointer;
     }
-input[type="button"]:hover
-{
-            background-color: #8c643b;
+input[type="button"]:hover{
+        background-color: #8c643b;
     }
