--- a/pagesStyle.css
+++ b/pagesStyle.css
@@ -18,7 +18,7 @@ header h1 {
 	font-size:45pt;
 	color: black;
 	text-shadow: 4px 3px 10px  #ad792f;
-	margin-top: 100px;
+	margin-top:  120px;
 	margin-bottom: 60px;
 	font-family: serif, fantasy;
 }
@@ -40,6 +40,7 @@ header p {
     position: absolute;
     top: 20px;
     left: 45%;
+    margin-bottom: 20px;
         }
 }
 nav {
